# project/routes/utils/matches_utils.js
@@ -15,6 +15,31 @@ async function getMatchesByStage() {
     return events;
   }
 
+async function getAllMatchesByIds(matchIds){
+  let match_ids_array = [];
+  matchIds.map((element) => match_ids_array.push(element.matchId)); //extracting the matches ids into array
+  let results = [];
+  match_ids_array.map((id) =>{
+    results.push(getMatchById(id));      
+    });
+  let matches_info = await Promise.all(results);
+  return matches_info
+}
+
+async function getMatchById(matchId) {
+  const matches = await DButils.execQuery(
+    `select * from matches where matches.matchId=${matchId}`
+    
+  );
+
+  console.log(matches)
+  return matches;
+}
+
+
   exports.getMatchesByStage = getMatchesByStage;
+  exports.getMatchById = getMatchById;
   exports.getMatchEventByMatch = getMatchEventByMatch;
+  exports.getAllMatchesByIds = getAllMatchesByIds;
+
   // `select matches.matchId ,matches.matchDate ,matches.matchHour ,matches.hostTeam , matches.guestTeam, matches.staduim ,matches.coachID ,matches.score ,eventLog.eventHour as Time,eventLog.eventDescription as Description from matches left join eventLog on matches.matchId = eventLog.matchId`
